@@ -11,6 +11,7 @@ Version 1.7.9+svn:
    * Shorter "Initializing Display" phase when staying in same campaign/MP
    * Optimize AI recruitement and movement phases
    * Add hotkey support for gui2
+   * Remove spurious hover error messages
 
 Version 1.7.9-beta2:
  * AI:
